--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
   },
   "homepage": "https://github.com/NIMP3/PlatzigramWeb#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "materialize-css": "^0.100.2",
+    "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.3.0",
+    "gulp-sass": "^4.0.1"
   }
 }
