--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "pug": "^2.0.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.3.0",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
