--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Comparte tus fotos estudiando en Platzi con el resto de la comunidad",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp",
+    "start": "gulp watch & node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,10 +25,12 @@
   },
   "homepage": "https://github.com/NIMP3/PlatzigramWeb#readme",
   "dependencies": {
+    "empty-element": "^1.0.0",
     "express": "^4.16.3",
     "materialize-css": "^0.100.2",
     "page": "^1.8.6",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "yo-yo": "^1.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -35,6 +39,7 @@
     "gulp": "^3.9.1",
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0"
   }
 }
