--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "materialize-css": "^0.100.2",
     "page": "^1.8.6",
     "pug": "^2.0.3",
+    "superagent": "^3.8.3",
     "title": "^3.3.1",
     "yo-yo": "^1.4.1"
   },
