--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/NIMP3/PlatzigramWeb#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "empty-element": "^1.0.0",
     "express": "^4.16.3",
     "intl-messageformat": "^2.2.0",
